--- a/router-params/index.html
+++ b/router-params/index.html
@@ -17,5 +17,13 @@
         <br>
         <input type="submit" value="登录">
     </form>
+    <hr>
+    <hr>
+    <form action="http://127.0.0.1:8080/upload" method="post" enctype="multipart/form-data">
+        头像：
+        <input type="file" name="file">
+        <br>
+        <input type="submit" value="提交">
+    </form>
 </body>
 </html>
