--- a/router-params/index.html
+++ b/router-params/index.html
@@ -5,6 +5,7 @@
     <title>登录</title>
 </head>
 <body>
+    <h2>表单数据</h2>
     <form action="http://127.0.0.1:8080/form" method="post" enctype="application/x-www-form-urlencoded">
         用户名：<input type="text" name="username">
         <br>
@@ -18,11 +19,16 @@
         <input type="submit" value="登录">
     </form>
     <hr>
-    <hr>
+    <h2>单文件上传</h2>
     <form action="http://127.0.0.1:8080/upload" method="post" enctype="multipart/form-data">
         头像：
         <input type="file" name="file">
         <br>
+        <input type="submit" value="提交">
+    </form>
+    <h2>多文件上传</h2>
+    <form action="http://127.0.0.1:8080/uploads" method="post" enctype="multipart/form-data">
+        Files: <input type="file" name="files" multiple><br><br>
         <input type="submit" value="提交">
     </form>
 </body>
